photography: jumbo photo; fixed some word spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,10 @@
     background-image: url('/img/DSC_0336.jpg');
 }
 
+#photography-jumbo {
+    background-image: url('/img/DSC_0113.jpg');
+}
+
 .jumbo-text {
     font-size: 6rem;
     text-shadow: 0.1rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
